Fix about section spacing

--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,10 @@ html {
     margin-right: auto;
   }
 }
+
+
+@media (min-width: 768px) {
+  #about .col-md-6:last-child {
+    padding-left: 2rem !important;
+  }
+}
